Add Lab Results Management in Doctors Module
Implement a new LabResult model with forms and views for managing lab results. Add associated templates for displaying and updating lab research results, and update the main doctors' views and templates to integrate these functionalities.

--- a/backend/apps/sanatorium/templates/sanatorium/doctors/components/consulting-treatment-program-card.html
+++ b/backend/apps/sanatorium/templates/sanatorium/doctors/components/consulting-treatment-program-card.html
@@ -47,7 +47,7 @@
                                 {% endif %}
                             </td>
                             <td>
-                                <a>
+                                <a href="{% url 'sanatorium_doctors:get_patient_lab_research' lab.id %}">
                                     {{ lab.lab }}
                                 </a>
                             </td>
