--- a/backend/apps/sanatorium/templates/sanatorium/dispatcher/patient_procedures.html
+++ b/backend/apps/sanatorium/templates/sanatorium/dispatcher/patient_procedures.html
@@ -29,7 +29,7 @@
 <body class="hold-transition layout-top-nav">
 <div class="wrapper">
     <!-- Navbar -->
-    {% include 'sanatorium/doctors/snippets/navbar.html' %}
+    {% include 'sanatorium/dispatcher/snippets/navbar.html' %}
     <!-- /.navbar -->
 
     <!-- Content Wrapper. Contains page content -->
@@ -138,10 +138,12 @@
                                             </td>
                                             <td>
                                                 <div class="progress progress-xs progress-striped active">
-                                                  <div class="progress-bar bg-success" style="width: {{ proc.progres_percentile }}%"></div>
+                                                    <div class="progress-bar bg-success"
+                                                         style="width: {{ proc.progres_percentile }}%"></div>
                                                 </div>
                                             </td>
-                                            <td><span class="badge bg-success">{{ proc.progres_percentile }}%</span></td>
+                                            <td><span class="badge bg-success">{{ proc.progres_percentile }}%</span>
+                                            </td>
                                             {% with current_url=request.get_full_path %}
                                                 <td class="project-actions text-right">
                                                     <a class="btn btn-info btn-sm"
@@ -152,15 +154,16 @@
                                                     </a>
                                                     {% if proc.state != 'dispatched' %}
 
-                                                        <a class="btn btn-success btn-sm" href="{% url 'sanatorium_dispatchers:patient_procedure_dispatch' proc.id %}">
+                                                        <a class="btn btn-success btn-sm"
+                                                           href="{% url 'sanatorium_dispatchers:patient_procedure_dispatch' proc.id %}">
                                                             <i class="fas fa-upload">
                                                             </i>
                                                             Диспетчеризировать
                                                         </a>
                                                     {% endif %}
                                                 </td>
-                                                </tr>
                                             {% endwith %}
+                                        </tr>
                                     {% endfor %}
                                     </tbody>
                                 </table>
