--- a/backend/apps/sanatorium/templates/sanatorium/dispatcher/snippets/navbar.html
+++ b/backend/apps/sanatorium/templates/sanatorium/dispatcher/snippets/navbar.html
@@ -1,8 +1,8 @@
 {% load static %}
 <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
     <div class="container">
-        <a href="{% url "sanatorium_doctors:main_screen" %}" class="navbar-brand">
-            <img src="{% static 'adminlte3_assets/dist/img/hayat_logo.png' %}" alt="AdminLTE Logo"
+        <a href="{% url "sanatorium_dispatchers:main_screen" %}" class="navbar-brand">
+            <img src="{% static 'adminlte3_assets/dist/img/hayat_logo.png' %}" alt="Hayat Logo"
                  class="brand-image img" style="opacity: .8">
             <span class="brand-text font-weight-light"></span>
         </a>
@@ -18,13 +18,13 @@
             <ul class="navbar-nav">
 
                 <li class="nav-item bg">
-                    <a href="{% url 'sanatorium_doctors:assigned_patients' %}" class="nav-link">Пациенты</a>
+                    <a href="{% url 'sanatorium_dispatchers:main_screen' %}" class="nav-link">Пациенты</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">События</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Диспетчеризация</a>
+                    <a href="{% url 'sanatorium_dispatchers:get_waiting_dispatch' %}" class="nav-link">Диспетчеризация</a>
                 </li>
             </ul>
 
